# ff-regulator-smc-polymer-sim

./: CMakeLists.txt  README.md
cmake_modules/: FindBoost.cmake
src/: CMakeLists.txt  ContactDetector.cpp  ContactDetector.hpp  Coordinate.cpp  Coordinate.hpp  Input.cpp  Input.hpp  main.cpp
src/io/: CMakeLists.txt  dcd_parser.cpp  dcd_parser.hpp  forcefield_reader.cpp  forcefield_reader.hpp  forcefield_writer.cpp  forcefield_writer.hpp
src/util/: CMakeLists.txt  utility.cpp  utility.hpp
